--- a/projects/portal/src/styles.less
+++ b/projects/portal/src/styles.less
@@ -5,5 +5,9 @@
 @import './styles/switcher';
 @import './styles/employee-list';
 @import './styles/carousel';
+@import './styles/sections';
 @import './styles/services';
 @import './styles/our-people-section';
+@import './styles/adverts';
+@import './styles/search-bar';
+@import './styles/add-advert-dialog';
