--- a/projects/portal/src/styles/common.less
+++ b/projects/portal/src/styles/common.less
@@ -5,7 +5,11 @@ html, body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  // background: @app-background-color
+  background: @app-background-color
+}
+
+input, button {
+  outline: none;
 }
 
 @keyframes grow{
