--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -1,16 +1,39 @@
 <div id="app">
-  <div id="app-header">
+  <header>
     <div class="background"></div>
     <div class="gradient">
       <div class="header-content col-10">
         <div class="logo"></div>
-        <button mat-stroked-button>Сергей Воронов</button>
+        <div>
+          <button mat-stroked-button [matMenuTriggerFor]="userMenu">Сергей Воронов</button>
+          <mat-menu #userMenu="matMenu" [yPosition]="'below'" class="user-menu">
+            <button mat-menu-item (click)="openAddAdvertDialog()">
+              <mat-icon color="accent">add</mat-icon>
+              Добавить объявление
+            </button>
+            <button mat-menu-item>
+              <mat-icon color="accent">exit_to_app</mat-icon>
+              Выйти  из приложения
+            </button>
+          </mat-menu>
+        </div>
       </div>
     </div>
-  </div>
+  </header>
 
-  <div id="app-content mb-4">
-    <router-outlet></router-outlet>
-  </div>
+
+  <main id="app-content mb-4">
+    <div class="row justify-content-center">
+      <div class="col-11 col-md-11 col-lg-10 col-xl-10 pt-4 pb-4">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="gradient"></div>
+    <div class="background"></div>
+  </footer>
 </div>
+
 
