--- a/projects/portal/src/app/portal/components/start/start.component.less
+++ b/projects/portal/src/app/portal/components/start/start.component.less
@@ -1,5 +1,6 @@
 .border-squircle(@radius-x; @radius-y) {
   .loop(@radius-x; @radius-y; 359; 100% 0);
+  box-shadow: 0 2px 16px rgba(0,0,0,.12);
 }
 .loop(@radius-x; @radius-y; @counter; @list) when (@counter >= 0) {
   @cos-x: cos(unit(@counter, deg));
@@ -23,9 +24,6 @@
 #app-content {
   z-index: 5;
   position: relative;
-  // width: @app-content-width;
-  // margin-top: -170px;
-  // background: rgba(255, 255, 255, 0.5);
   margin-right: auto;
   margin-left: auto;
 
@@ -36,13 +34,13 @@
 
     &.separator {
       & > div {
-        border-top: 1px dotted #eeeeee;
+        border-top: 1px solid #eceff1;
         .mat-icon {
           width: 42px;
           margin-top: -12px;
           text-align: center;
-          color: #f5f5f5;
-          background: white;
+          color: #eceff1;
+          background: #fafafa;
         }
       }
     }
@@ -135,6 +133,7 @@
       // background: #f5f5f5;
     }
 
+    /*
     .section-caption {
       display: flex;
       flex-direction: row;
@@ -147,6 +146,8 @@
       padding: 0px 0px 20px 0px;
     }
 
+     */
+
     .section-content {
       display: flex;
       flex-direction: column;
@@ -155,30 +156,43 @@
 
       &.highlighted {
         padding: 20px;
-        background: #fafafa;
+        background: #f5f5f5;
         border-radius: 8px;
       }
 
 
       .mat-grid-tile {
         &.advert {
+          z-index: 1;
           background-size: cover !important;
           background-position: center !important;
+          box-shadow: 0 2px 16px rgba(0,0,0,.12);
+          border-radius: 4px;
+          transition: all linear 0.1s;
+
+          &:hover {
+            z-index: 2;
+            transform: scale(1.08);
+          }
           // background: url('/assets/pylon-2.png'), linear-gradient(to bottom right, #80cbc4 45%, #e0f2f1 100%);
 
 
           &:nth-child(1) {
             // background: url('/assets/pylon-1.png'), linear-gradient(to bottom right, #80cbc4 45%, #e0f2f1 100%);
-            background: url('/assets/pylon-1.png'), linear-gradient(to bottom, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%);
+            // background: url('/assets/pylon-1.png'), linear-gradient(to bottom, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%);
+            background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%);
           }
 
           &:nth-child(2) {
             // background: url('/assets/pylon-5.png'), linear-gradient(to bottom right, #9fa8da 45%, #ede7f6 100%);
-            background: url('/assets/pylon-5.png'), linear-gradient(to bottom, rgba(111, 170, 167, 1) 50%, rgba(210, 224, 224, 1) 100%);
+            // background: url('/assets/pylon-5.png'), linear-gradient(to bottom, rgba(111, 170, 167, 1) 50%, rgba(210, 224, 224, 1) 100%);
+            background: linear-gradient(to bottom, rgba(111, 170, 167, 1) 50%, rgba(210, 224, 224, 1) 100%);
+
           }
 
           &:nth-child(3) {
-            background: url('/assets/pylon-2.png'), linear-gradient(to bottom, rgba(205, 165, 132, 1) 50%, rgba(232, 201, 134, 1) 100%);
+            // background: url('/assets/pylon-2.png'), linear-gradient(to bottom, rgba(205, 165, 132, 1) 50%, rgba(232, 201, 134, 1) 100%);
+            background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 50%, rgba(232, 201, 134, 1) 100%);
             // background: url('/assets/pylon-6.png'), linear-gradient(to bottom right, #a5d6a7 45%, #e8f5e9 100%);
             background-position: bottom left !important;
             background-size: contain !important;
@@ -300,8 +314,8 @@
           justify-content: space-between;
           align-items: center;
           // flex-wrap: wrap;
-          width: 95px;
-          height: 95px;
+          width: 90px;
+          height: 90px;
           margin-top: 10px;
           padding: 10px;
           box-sizing: border-box;
@@ -322,21 +336,24 @@
             // border: 4px solid #eceff1;
             // box-shadow: inset 0px 0px 10px rgba(0,0,0,0.15);
             box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+            // transform: rotateZ(90deg);
+            transform: scaleY(1,5);
+            // box-shadow: 0 0 0 40px #53a7ea;
+
+            .service-caption {
+              //padding-top: 10px;
+            }
 
           }
 
           &.ukitasu {
             background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 10%, rgba(201, 225, 237, 1) 90%);
-            box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2) !important;
-
-            .border-squircle(50%; 50%);
 
             &:hover {
-              box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2) !important;
-
+              background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 10%, rgba(51, 166, 198, 1) 90%);
               .service-icon {
                 img {
-                  //transform: scale(0.7);
+                  transform: scale(1.2);
                   //margin-bottom: -5%;
                 }
               }
@@ -354,9 +371,10 @@
             background: linear-gradient(to bottom, rgba(111, 170, 167, 1) 10%, rgba(210, 224, 224, 1) 90%);
 
             &:hover {
+              background: linear-gradient(to bottom, rgba(111, 170, 167, 1) 10%, rgba(111, 170, 167, 1) 90%);
               .service-icon {
                 img {
-                  transform: scale(1.1);
+                  transform: scale(1.2);
                 }
               }
             }
@@ -373,9 +391,10 @@
             background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 10%, rgba(232, 201, 134, 1) 90%);
 
             &:hover {
+              background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 10%, rgba(205, 165, 132, 1) 90%);
               .service-icon {
                 img {
-                  transform: scale(1.1);
+                  transform: scale(1.2);
                 }
               }
             }
@@ -392,9 +411,10 @@
             background: linear-gradient(to bottom, rgba(254, 156, 161, 1) 10%, rgba(242, 217, 219, 1) 90%);
 
             &:hover {
+              background: linear-gradient(to bottom, rgba(254, 156, 161, 1) 10%, rgba(254, 156, 161, 1) 90%);
               .service-icon {
                 img {
-                  transform: scale(1.1);
+                  transform: scale(1.2);
                 }
               }
             }
@@ -411,9 +431,10 @@
             background: linear-gradient(to bottom, rgba(96, 188, 254, 1) 10%, rgba(222, 240, 250, 1) 90%);
 
             &:hover {
+              background: linear-gradient(to bottom, rgba(96, 188, 254, 1) 10%, rgba(96, 188, 254, 1) 90%);
               .service-icon {
                 img {
-                  transform: scale(1.1);
+                  transform: scale(1.2);
                 }
               }
             }
@@ -428,7 +449,7 @@
 
           .service-icon {
             img {
-              transition: all linear 0.25s;
+              transition: all linear 0.1s;
             }
 
             .mat-icon {
@@ -447,6 +468,7 @@
             align-items: center;
             width: 100%;
             height: 30px;
+            padding-top: 15px;
             font-family: 'Comfortaa', cursive;
             font-size: 12px;
             line-height: 13px;
