--- a/projects/portal/src/styles/our-people-section.less
+++ b/projects/portal/src/styles/our-people-section.less
@@ -18,13 +18,14 @@
     background-size: cover !important;
     background-position: top center !important;
     border-radius: 4px;
-    transition: all linear 0.15s;
+    box-shadow: 0 2px 16px rgba(0,0,0,.12);
+    transition: all linear 0.1s;
 
     &:hover {
       z-index: 2;
-      border-radius: 8px;
-      box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
-      transform: scale(1.07);
+      // border-radius: 8px;
+      // box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+      transform: scale(1.08);
 
       .details {
         border-bottom-left-radius: 4px;
