PRESS: bug fixes

--- a/projects/press-reports/src/app/press-reports/components/reports-list/reports-list.component.html
+++ b/projects/press-reports/src/app/press-reports/components/reports-list/reports-list.component.html
@@ -60,7 +60,7 @@
               color="primary"
               matTooltip="Редактировать отчет"
               matTooltipPosition="above"
-              [hidden]="!reports.length > 0"
+              [hidden]="reports.length > 0"
               (click)="openEditReportDialog()">
         <mat-icon>edit</mat-icon>
       </button>
