--- a/projects/portal/src/app/portal/components/portal/portal.component.less
+++ b/projects/portal/src/app/portal/components/portal/portal.component.less
@@ -68,11 +68,11 @@ header {
       margin-left: 15%;
 
       .logo {
-        width: 80px;
-        height: 90px;
+        width: 200px;
+        height: 70px;
         background-size: contain !important;
         background-repeat: no-repeat !important;
-        background: url('/assets/rosnet_logo.png');
+        background: url('/assets/rosseti_logo.png');
       }
 
       .mat-stroked-button {
