--- a/projects/portal/src/styles/button.less
+++ b/projects/portal/src/styles/button.less
@@ -12,11 +12,11 @@
   font-weight: 700;
   text-decoration: none;
   //color: #7986cb;
-  color: #004f8c99;
+  color: #5186B0;
   background: transparent;
   cursor: pointer;
   // border: 1.5px solid #7986cb;
-  border: 1.5px solid #004f8c99;
+  border: 1.5px solid #5186B0;
   border-radius: 4px;
   outline: none !important;
   transition: all linear 0.1s;
@@ -56,8 +56,8 @@
 
   &:hover {
     color: white;
-    background: #004f8c99;
-    border-color: #004f8c99;
+    background: #5186B0;
+    border-color: #5186B0;
 
     .mat-icon {
       color: white;
