--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -7,9 +7,9 @@
   margin-bottom: @advert-margin-bottom;
   border-radius: 4px;
   // background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%);
-  background: url('/assets/mrsk-portal.jpg');
-  background-size: cover;
-  background-position: top center;
+  // background: url('/assets/mrsk-portal.jpg');
+  background-size: cover !important;
+  background-position: top center !important;
   box-shadow: 0 2px 16px rgba(0,0,0,.12);
   cursor: pointer;
   transition: all linear 0.1s;
