--- a/projects/portal/src/app/adverts/components/new-advert/new-advert.component.less
+++ b/projects/portal/src/app/adverts/components/new-advert/new-advert.component.less
@@ -1,5 +1,5 @@
 :host ::ng-deep .ck-editor__editable_inline {
-  min-height: 300px;
+  min-height: 570px;
 }
 
 
@@ -298,4 +298,13 @@
       }
     }
   }
+}
+
+.advert-image {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-size: cover !important;
+  background-position: top center !important;
+  border: 1px solid #eceff1;
 }
