--- a/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
+++ b/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
@@ -300,6 +300,14 @@
   }
 }
 
+.action-helper {
+  font-family: 'Comfortaa', cursive;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 14px;
+  color: #90a4ae;
+}
+
 .advert-image {
   display: flex;
   flex-direction: column;
