--- a/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
+++ b/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
@@ -1,9 +1,22 @@
 .attachments-list {
   display: flex;
   flex-direction: column;
+  flex: 1;
 
   .caption {
     margin-bottom: 30px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #78909c;
+  }
+
+  .no-attachments-placeholder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     font-family: 'Comfortaa', cursive;
     font-size: 14px;
     text-transform: uppercase;
