--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -2,12 +2,15 @@
 @advert-margin-bottom: 15px;
 
 .advert {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: @advert-height;
   margin-bottom: @advert-margin-bottom;
   border-radius: 4px;
   // background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%);
   // background: url('/assets/mrsk-portal.jpg');
+  text-decoration: none;
   background-size: cover !important;
   background-position: top center !important;
   box-shadow: 0 2px 16px rgba(0,0,0,.12);
@@ -16,6 +19,14 @@
 
   &:hover {
     transform: scale(1.1);
+  }
+
+  &.no-image {
+    background: linear-gradient(to top, rgba(51, 166, 198, 1) 50%, rgba(201, 225, 237, 1) 100%) !important;
+
+    .advert-caption-and-preview {
+      background: transparent !important;
+    }
   }
 
   &:nth-of-type(n+1) {
@@ -28,38 +39,55 @@
   }
 
   &:nth-of-type(3) {
-    background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 50%, rgba(232, 201, 134, 1) 100%) !important;
+    //background: linear-gradient(to bottom, rgba(205, 165, 132, 1) 50%, rgba(232, 201, 134, 1) 100%) !important;
   }
 
   .advert-date {
-    position: relative;
-    display: inline-flex;
-    padding: 7px 12px;
+    display: flex;
+    flex-direction: row;
+
+    //position: relative;
+    //display: inline;
     font-family: 'Comfortaa', cursive;
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
     color: white;
     //background: rgba(255, 255, 255, 0.1);
-    background: rgba(0, 79 ,140, 0.6);
 
-    .mat-icon {
-      margin-left: 20px;
-      width: 15px;
-      height: 15px;
-      font-size: 15px;
-      color: white;
+
+    .date {
+      padding: 7px 12px;
+      background: rgba(0, 79 ,140, 0.6);
+
+      .mat-icon {
+        margin-left: 20px;
+        width: 15px;
+        height: 15px;
+        font-size: 15px;
+        color: white;
+      }
     }
   }
 
+  .advert-caption-and-preview {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 60px;
+    padding: 30px 20px;
+    background: rgba(0, 79 ,140, 0.6);
+    background: linear-gradient(to bottom, transparent 10%, rgba(0, 79 ,140, 0.8) 50%) !important;
+  }
+
   .advert-caption {
-    margin-top: 30px;
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Comfortaa', cursive;
-    font-size: 15px;
-    line-height: 17px;
-    font-weight: 500;
+    font-size: 19px;
+    line-height: 19px;
+    font-weight: 900;
     text-transform: uppercase;
     color: white;
   }
@@ -69,9 +97,9 @@
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Comfortaa', cursive;
-    font-size: 13px;
+    font-size: 14px;
     line-height: 14px;
-    font-weight: 300;
+    font-weight: 600;
     color: white;
   }
 
