--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -31,7 +31,17 @@
   </main>
 
   <footer>
-    <div class="gradient"></div>
+    <div class="gradient">
+      <div class="row justify-content-center">
+        <div class="footer-section col-11 col-md-11 col-lg-10 col-xl-10 pt-4 pb-4">
+          <a href="http://www.kolen.elektra.ru/zayavki">Заявки УКиТАСУ</a>
+          <a href="">Заявки автотранспорт</a>
+          <a href="">Заявки АХО</a>
+          <a href="">Расчетные листки</a>
+          <a href="">Телефонный справочник</a>
+        </div>
+      </div>
+    </div>
     <div class="background"></div>
   </footer>
 </div>
