--- a/projects/portal/src/styles/sections.less
+++ b/projects/portal/src/styles/sections.less
@@ -3,15 +3,27 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 55px;
+  height: 45px;
   font-family: 'Comfortaa', cursive;
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
   color: #004f8c !important;
-  padding: 0px 0px 20px 0px;
+  // padding: 0px 0px 20px 0px;
+
+  &.small {
+    height: 30px;
+  }
 
   a {
     color: #004f8c !important;
+  }
+
+  .attribute {
+    height: 30px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 13px;
+    font-weight: 400;
+    color: #90a4ae;
   }
 }
