--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -79,9 +79,12 @@
     padding: 30px 20px;
     background: rgba(0, 79 ,140, 0.6);
     background: linear-gradient(to bottom, transparent 10%, rgba(0, 79 ,140, 0.8) 50%) !important;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
 
   .advert-caption {
+    margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Comfortaa', cursive;
