PORTAL: add advert by template added, advert details page modified

--- a/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.html
+++ b/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.html
@@ -45,78 +45,130 @@
       <div class="row pl-2 pr-2">
         <div class="col-12">
           <form [formGroup]="advertForm">
+            <!-- Start: Шаблон, на основе которого создается объявление -->
             <mat-form-field appearance="fill" class="w-100 mt-2">
+              <mat-label>На основе шаблона</mat-label>
+              <mat-select formControlName="template">
+                <mat-option *ngFor="let template of templates$ | async" [value]="template">
+                  {{template.title}}
+                </mat-option>
+              </mat-select>
+              <mat-hint>Объявление, на основе которого создается новое объявление</mat-hint>
+            </mat-form-field>
+            <!-- End: Шаблон, на основе которого создается объявление -->
+
+            <!-- Start: Заголовок обявления -->
+            <mat-form-field appearance="fill" class="w-100 mt-4">
               <mat-label>Заголовок объявления</mat-label>
-              <input matInput placeholder="Введите заголовок объявления" [errorStateMatcher]="matcher" formControlName="title" required>
+              <input matInput
+                     placeholder="Введите заголовок объявления"
+                     [errorStateMatcher]="matcher"
+                     formControlName="title"
+                     required>
               <mat-icon class="valid-icon" matSuffix *ngIf="advertForm.get('title').valid">done</mat-icon>
+              <mat-hint>Заголовок отражает основную мысль объявления</mat-hint>
               <mat-error *ngIf="advertForm.get('title').invalid">Вы не указали заголовок объявления</mat-error>
             </mat-form-field>
+            <!-- End: Заголовок обявления -->
 
+            <!-- Start: Краткое содержание обявления -->
             <mat-form-field appearance="fill" class="w-100 mt-4">
               <mat-label>Краткое содержание объявления</mat-label>
-              <input matInput placeholder="Введите краткое содержание объявления" [errorStateMatcher]="matcher" formControlName="preview">
+              <input matInput
+                     placeholder="Введите краткое содержание объявления"
+                     [errorStateMatcher]="matcher"
+                     formControlName="preview">
               <mat-icon class="valid-icon" matSuffix *ngIf="advertForm.get('preview').valid && advertForm.get('preview').value">done</mat-icon>
-              <mat-error *ngIf="advertForm.get('preview').invalid">Вы не указали краткое содержание объявления</mat-error>
+              <mat-hint>Содержание объявления одним предложением (необязательно)</mat-hint>
+              <mat-error *ngIf="advertForm.get('preview').invalid">Вы не указали краткое содержание объявления
+              </mat-error>
             </mat-form-field>
+            <!-- Start: Краткое содержание обявления -->
+
+            <!-- Start: Дата публикации объявления -->
+            <mat-form-field appearance="fill" class="w-100 mt-4">
+              <input matInput [matDatepicker]="picker" formControlName="date" placeholder="Дата публикации">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+              <mat-hint>Дата, которой будет датировано объявление</mat-hint>
+            </mat-form-field>
+            <!-- End: Дата публикации объявления -->
+
+            <div class="row mt-4" *ngIf="!advertForm.get('template').value">
+              <div class="col-12">
+                <mat-checkbox class="pr-3" formControlName="isTemplate">Объявление является шаблоном</mat-checkbox>
+              </div>
+            </div>
+
           </form>
         </div>
       </div>
+    </div>
 
-      <div class="row mt-4 pl-2 pr-2 d-flex" style="flex: 1;">
-        <div class="col-8">
-          <div class="advert-image" [ngStyle]="{'background': advert.image ? 'url(' + advert.image + ')' : 'url(assets/no-image.jpg)'}"></div>
-        </div>
-        <div class="col-4">
-          <div class="action-helper text-center">Изображение (необязательно)</div>
+    <!-- Start: Вкладка с изрбражением объявления -->
+    <div class="h-100" *ngSwitchCase="formWithSteps.steps[1]">
+      <div class="d-flex flex-column justify-content-center align-items-center h-100">
+        <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+          <!-- Start: Изображение или плейсхолдер объявления -->
+          <div class="advert-image"
+               [ngStyle]="{'background': advert.image ? 'url(' + advert.image + ')' : 'url(/assets/no-image.jpg)'}">
+          </div>
+          <!-- End: Изображение или плейсхолдер объявления -->
 
-          <button class="kol-button w-100 mt-3" [disabled]="uploadingImageInProgress$ | async" (click)="dialog.click()">
+          <!-- Start: Кнопка загрузки изображения -->
+          <button class="kol-button w-100 mt-4" [disabled]="uploadingImageInProgress$ | async" (click)="dialog.click()">
             <mat-icon *ngIf="!(uploadingImageInProgress$ | async)">cloud_upload</mat-icon>
             <mat-progress-spinner *ngIf="uploadingImageInProgress$ | async" diameter="20" mode="indeterminate"></mat-progress-spinner>
             <span>Загрузить</span>
             <input type="file" #dialog (change)="imageSelected($event.target.files)">
           </button>
+          <!-- End: Кнопка загрузки изображения -->
 
-          <button class="kol-button w-100 mt-2" *ngIf="(advert$ | async).image" [disabled]="uploadingImageInProgress$ | async" (click)="deleteImage()">
+          <!-- Start: Кнопка удаления изображения -->
+          <button class="kol-button w-100 mt-2"
+                  *ngIf="(advert$ | async).image"
+                  [disabled]="uploadingImageInProgress$ | async"
+                  (click)="deleteImage()">
             <mat-icon *ngIf="!(deletingImageInProgress$ | async)">delete</mat-icon>
             <mat-progress-spinner *ngIf="deletingImageInProgress$ | async" diameter="20" mode="indeterminate"></mat-progress-spinner>
             <span>Удалить</span>
           </button>
+          <!-- End: Кнопка удаления изображения -->
         </div>
-      </div>
     </div>
+  </div>
+    <!-- End: Вкладка с изображением объявления -->
 
-    <div class="h-100" *ngSwitchCase="formWithSteps.steps[1]">
+    <div class="h-100" *ngSwitchCase="formWithSteps.steps[2]">
       <div class="row h-100">
         <div class="col-12 h-100">
           <ckeditor
             [editor]="Editor"
             [config]="editorConfig"
             [(ngModel)]="content"
+            (ready)="onReady($event)"
             (change)="newAdvertContentChanged($event)">
           </ckeditor>
         </div>
       </div>
     </div>
 
-    <div class="h-100" *ngSwitchCase="formWithSteps.steps[2]">
+    <!-- Start: Вкладка с вложениями -->
+    <div class="h-100" *ngSwitchCase="formWithSteps.steps[3]">
       <div class="h-100 d-flex flex-column justify-content-start">
-        <!--
-        <span>Вложений нет</span><br>
-        <button mat-stroked-button (click)="dialog.click()">
-          Загрузить
-          <input type="file" name="" id="" style="visibility: hidden; width: 0px;" #dialog (change)="attachmentSelected($event)">
-        </button>
-        -->
         <app-attachments-list
           [attachments]="(advert$ | async).attachments"
           [allowUpload]="true"
           [allowDelete]="true"
           [uploadingInProgress]="uploadingAttachmentInProgress$ | async"
+          [showNoAttachmentsPlaceholder]="true"
           (select)="attachmentSelected($event)"
           (remove)="attachmentRemoved($event)">
         </app-attachments-list>
       </div>
     </div>
+    <!-- End: Вкладка с вложениями -->
+
   </div>
   <!-- End: Область ввода параметров заявки -->
 
