--- a/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
+++ b/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
@@ -311,8 +311,10 @@
 .advert-image {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 100%;
   background-size: cover !important;
   background-position: top center !important;
-  border: 1px solid #eceff1;
+  border: 2px solid #eceff1;
+  border-radius: 4px;
 }
