--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.html
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.html
@@ -28,7 +28,7 @@
          [ngStyle]="{'background': advert.image ? 'url(' + advert.image + ')' : ''}">
       <div class="advert-date">
         <span class="date">{{ advert.dateCreatedD | date: 'dd MMMM' }}</span>
-        <div class="d-flex flex-row justify-content-center" *ngIf="advert.attachments.length > 0">
+        <div class="attachments" *ngIf="advert.attachments.length > 0">
           <mat-icon>attach_file</mat-icon>
           {{advert.attachments.length}}
         </div>
