--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -45,23 +45,23 @@
   .advert-date {
     display: flex;
     flex-direction: row;
-
-    //position: relative;
-    //display: inline;
     font-family: 'Comfortaa', cursive;
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
     color: white;
-    //background: rgba(255, 255, 255, 0.1);
-
 
     .date {
       padding: 7px 12px;
       background: rgba(0, 79 ,140, 0.6);
+      border-top-left-radius: 4px;
+    }
+
+    .attachments {
+      padding: 7px 12px;
+      background: rgba(0, 79 ,140, 0.6);
 
       .mat-icon {
-        margin-left: 20px;
         width: 15px;
         height: 15px;
         font-size: 15px;
