--- a/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
+++ b/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.less
@@ -1,5 +1,7 @@
 :host ::ng-deep .ck-editor__editable_inline {
-  min-height: 570px;
+  min-height: 535px;
+  border: 1px solid #C4C4C4;
+  border-top: none;
 }
 
 
