--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.less
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
   height: @advert-height;
   margin-bottom: @advert-margin-bottom;
   border-radius: 4px;
@@ -100,7 +101,7 @@
     margin-right: 20px;
     font-family: 'Comfortaa', cursive;
     font-size: 19px;
-    line-height: 19px;
+    line-height: 22px;
     font-weight: 900;
     text-transform: uppercase;
     color: white;
