--- a/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
+++ b/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="mt-3" [innerHtml]="content"></div>
+<div class="mt-3" [innerHtml]="markup"></div>
 
 <!-- Start: Вложения в объявлении -->
 <div class="row mt-md-5">
